update with url for app

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <h1 class="hero-title">Your Aircraft Logbook<br><span class="text-gradient">Reinvented.</span></h1>
         <p class="hero-subtitle">Keep track of aircraft you have seen or flown on like never before.</p>
         
-          <a href="" target="_blank" class="download-btn always-visible">
+          <a href="https://apps.apple.com/us/app/tailtag/id6747738157" target="_blank" class="download-btn always-visible">
         <i class="bi bi-apple"></i>
-        Testflight Beta soon
+       Download
       </a>
       </div>
 
