--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <i class="bi bi-apple"></i>
        Download
       </a>
+           <a href="https://testflight.apple.com/join/zXMv5qHd" target="_blank" class="download-btn always-visible">
+        <i class="bi bi-apple"></i>
+        Testflight Beta
+      </a>
       </div>
 
   </section>
