--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="#home" class="nav-link">Home</a>
         <a href="#features" class="nav-link">Features</a>
         <a href="#privacy" class="nav-link">Privacy</a>
-        <a href="mailto:JoshCumulus@proton.me?subject=Contacting%20TailTag&body=Hi%2C%20I%20have%20a%20question..." class="nav-link">Contact</a>
+        <a href="mailto:feedback@appsbyjosh.com?subject=Contacting%20TailTag&body=Hi%2C%20I%20have%20a%20question..." class="nav-link">Contact</a>
       </div>
       
       <div class="hamburger">
